Changelog
=========

3.0.2 - unreleased
------------------

- Detect charset of files and encode as utf8 when indexing
  SearchableText, even when not using textindexng.
  [davisagli]

- Add explicit zope.app.container dependency.
  [danjacka]

3.0.1 - June 19, 2013
---------------------

- Fix regression preventing the creation of new Reflectors.
  [davisagli]

3.0 - June 18, 2013
-------------------

- If plone.app.uuid is present, provide a UUID for reflected files.
  The UUID is based on the main reflector's UID and the file's path.
  [davisagli]


3.0b1 - January 23, 2013
------------------------

- Make sure reflected files implement all three methods (!!) to return the
  content type. This fixes problems displaying text files.

- Log skipped files when iterating over directory contents.

- Do manual splitting of filenames when indexing content. This allows searching
  for filenames. This previously did not work because the standard indexer strips
  dots, which does not work well for filenames.


2.5.1 - May 8, 2012
-------------------

- Package fix [aclark]

2.5 - May 8, 2012
-----------------

- Fixed broken imports for Plone 4.1 compatibility
  [swampmonkey]

- Make compatible with Plone 4/Zope 2.12 by removing z2-style interfaces
  and adjusting some imports
  [tom_gross]


2.4 - July 17, 2009
-------------------

- Disable recursive handling of AT references in reflectors: proxies
  filesystem data is never referenceable, so this only slowed things
  down.
  [wichert]

- Disable ownership fixing after adding reflector proxies. This prevents
  slow tree walks after copy/pasting reflectors.
  [wichert]

- Silence manage_after* deprecation warning.
  [wichert]


2.3 - June 19, 2009
-------------------

- Do no index filesystem data when running in life mode. This guarantees
  no stale data will be in the catalog.
  [wichert]

- Do not add trailing slash to file URLs in the folder contents view. This